--- a/3/assets/index.html
+++ b/3/assets/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,33 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
   <link rel="stylesheet" href="./styles.css" />
 </head>
+
 <body>
-  
+  <div class="card">
+    <div class="card__content">
+
+      <div class="card__item">
+        <span class="card__title">SimpleWheels</span>
+        <img class="account" src="img/account.svg" /> </div>
+
+      <div class="card__item">
+        <span class="card__description">Thanks for your order #23234, your page will be on it's way shortly.</span>
+      </div>
+
+      <div class="card__item">Chapelli Vintage Single Speed
+        <span class="card__price">$317</span>
+      </div>
+
+      <div class="card__item">Castelli Arenberg Gel Gloves
+          <span class="card__price">$39</span>
+      </div>
+
+      <div class="card__item">Total
+          <span class="card__price">$356</span>
+      </div>
+
+    </div>
+  </div>
 </body>
+
 </html>
