add box-shadow effect

--- a/3/assets/index.html
+++ b/3/assets/index.html
@@ -16,8 +16,9 @@
 
       <div class="card__item">
         <span class="card__title">SimpleWheels</span>
-        <img class="account" src="img/account.svg" /> </div>
-
+        <div class="card__account">
+          <img class="account__icon" src="img/account.svg" /> </div>
+      </div>
       <div class="card__item">
         <span class="card__description">Thanks for your order #23234, your page will be on it's way shortly.</span>
       </div>
@@ -27,11 +28,11 @@
       </div>
 
       <div class="card__item">Castelli Arenberg Gel Gloves
-          <span class="card__price">$39</span>
+        <span class="card__price">$39</span>
       </div>
 
       <div class="card__item">Total
-          <span class="card__price">$356</span>
+        <span class="card__price">$356</span>
       </div>
 
     </div>
