--- a/4/assets/index.html
+++ b/4/assets/index.html
@@ -19,19 +19,21 @@
       </span>
     </div>
     <div class="box">
-      <div>Today</div>
-      <div>10:53</div>
-      <div>Hi, Mark! I made a new design for Messenger App.</div>
-      <div>10:57</div>
-      <div>Yo, send it to my assistant and we'll review it during the year</div>
-      <div>11:03</div>
-      <div>But Mark...</div>
-      <div>You were block by the user.</div>
+      <div class="day"><h5><span>Today</span></h4></div>
+      <div class="time-left">10:53</div>
+      <div class="msg-left">Hi, Mark! I made a new design for Messenger App.</div>
+      <div class="time-right">10:57</div>
+      <div class="msg-right">Yo, send it to my assistant and we'll review it during the year</div>
+      <div class="time-left">11:03</div>
+      <div class="msg-left">But Mark...</div>
+      <div class="time-right"></div>
+      <div class="error-right">You were block by the user.</div>
+      <div class="day"><h6><span></span></h4></div>
     </div>
     <div class="text-box">
       <form>
-        <input type="text">
-        <input type="submit">
+        <input class="text" type="text" placeholder="Enter your message">
+        <input class="submit" type="submit" value="SEND">
       </form>
     </div>
   </div>
