--- a/5/assets/index.html
+++ b/5/assets/index.html
@@ -10,6 +10,15 @@
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
-  
+  <div class="main">
+    <div class="content">
+      <div class="top"></div>
+      <div class="details"></div>
+      <div class="info">
+        <div class="text"></div>
+        <div class="qr"></div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
