--- a/5/assets/index.html
+++ b/5/assets/index.html
@@ -13,6 +13,17 @@
   <div class="main">
     <div class="content">
       <div class="top"></div>
+      <div class="top-left">
+        <h1>FRA</h1>
+        <h3>Frankfurt</h3>
+      </div>
+      <div class="top-middle">
+      <h1>-</h1>
+      </div>
+      <div class="top-right">
+      <h1>AMS</h1>
+      <h3>Amsterdam</h3>
+      </div>
       <div class="details"></div>
       <div class="info">
         <div class="text"></div>
