--- a/5/assets/index.html
+++ b/5/assets/index.html
@@ -25,9 +25,28 @@
       <h3>Amsterdam</h3>
       </div>
       <div class="details"></div>
+      <div class="details-left">
+        <h5>Flight</h5>
+        <h5></h5>
+      </div>
+      <div class="details-middle">
+        <h5>Gate</h5>
+        <h5></h5>
+      </div>
+      <div class="details-right">
+        <h5>Seat</h5>
+        <h5></h5>
+      </div>
       <div class="info">
-        <div class="text"></div>
-        <div class="qr"></div>
+        <div class="text">
+        <h5>Passenger</h5>
+        <h3>Robert De Niro</h3>
+        <h5>Class</h5>
+        <h3>Business</h3>
+        <h5>Departure</h5>
+        <h3>3:45am, Dec 15</h3>
+        </div>
+        <div class="qr"><img src="img/qr.svg"></div>
       </div>
     </div>
   </div>
