--- a/5/assets/index.html
+++ b/5/assets/index.html
@@ -14,15 +14,15 @@
     <div class="content">
       <div class="top"></div>
       <div class="top-left">
-        <h1>FRA</h1>
-        <h3>Frankfurt</h3>
+        <h1 class="country">FRA</h1>
+        <h3 class="city">Frankfurt</h3>
       </div>
       <div class="top-middle">
       <h1>-</h1>
       </div>
       <div class="top-right">
-      <h1>AMS</h1>
-      <h3>Amsterdam</h3>
+      <h1 class="country">AMS</h1>
+      <h3 class="city">Amsterdam</h3>
       </div>
       <div class="details"></div>
       <div class="details-left">
