--- a/5/assets/index.html
+++ b/5/assets/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="main">
     <div class="content">
-      <div class="top"></div>
+      <div class="top">
       <div class="top-left">
         <h1 class="country">FRA</h1>
         <h3 class="city">Frankfurt</h3>
@@ -20,31 +20,33 @@
       <div class="top-middle">
       <h1>-</h1>
       </div>
+      </div>
       <div class="top-right">
       <h1 class="country">AMS</h1>
       <h3 class="city">Amsterdam</h3>
       </div>
-      <div class="details"></div>
+      <div class="details">
       <div class="details-left">
-        <h5>Flight</h5>
-        <h5>815</h5>
+        <h5 class="details-header">Flight</h5>
+        <h5 class="details-text">815</h5>
       </div>
       <div class="details-middle">
-        <h5>Gate</h5>
-        <h5>23G</h5>
+        <h5 class="details-header">Gate</h5>
+        <h5 class="details-text">23G</h5>
       </div>
       <div class="details-right">
-        <h5>Seat</h5>
-        <h5>10F</h5>
+        <h5 class="details-header">Seat</h5>
+        <h5 class="details-text">10F</h5>
+      </div>
       </div>
       <div class="info">
         <div class="text">
-        <h5>Passenger</h5>
-        <h3>Robert De Niro</h3>
-        <h5>Class</h5>
-        <h3>Business</h3>
-        <h5>Departure</h5>
-        <h3>3:45am, Dec 15</h3>
+        <h5 class="passenger">Passenger</h5>
+        <h3 class="passenger-text">Robert De Niro</h3>
+        <h5 class="class">Class</h5>
+        <h3 class="class-text">Business</h3>
+        <h5 class="departure">Departure</h5>
+        <h3 class="departure-text">3:45am, Dec 15</h3>
         </div>
         <div class="qr"><img src="img/qr.svg"></div>
       </div>
